# phantomime

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  human_browser.py  pyproject.toml
.github/workflows/: publish.yml
docs/: ANTI_DETECTION.md  ARCHITECTURE.md  FAQ.md  PERFORMANCE_TUNING.md  RECIPES.md
phantomime/: __init__.py  browser.py
tests/: test_basic.py
